<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText_1"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/editText_1"
        android:inputType="numberDecimal|numberSigned"
        android:lines="1"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/button_1"
        app:layout_constraintEnd_toStartOf="@id/textView_1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/textView_1"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/textView_2"
        app:layout_constraintStart_toEndOf="@id/editText_1"
        app:layout_constraintTop_toTopOf="@id/editText_1" />

    <TextView
        android:id="@+id/textView_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:text="@string/textView_2"
        android:translationY="15dp"
        app:layout_constraintBottom_toTopOf="@id/textView_1"
        app:layout_constraintEnd_toStartOf="@id/textView_3"
        app:layout_constraintStart_toEndOf="@id/textView_1" />

    <TextView
        android:id="@+id/textView_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/textView_3"
        android:textSize="20sp"
        android:translationY="33dp"
        app:layout_constraintBottom_toTopOf="@id/editText_1"
        app:layout_constraintEnd_toStartOf="@id/editText_2"
        app:layout_constraintStart_toEndOf="@id/textView_2" />

    <EditText
        android:id="@+id/editText_2"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:hint="@string/editText_2"
        android:inputType="numberDecimal|numberSigned"
        android:lines="1"
        android:maxLines="1"
        app:layout_constraintEnd_toStartOf="@id/textView_4"
        app:layout_constraintStart_toEndOf="@id/textView_3"
        app:layout_constraintTop_toTopOf="@id/editText_1"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/textView_1"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/textView_5"
        app:layout_constraintStart_toEndOf="@id/editText_2"
        app:layout_constraintTop_toTopOf="@id/editText_1" />

    <TextView
        android:id="@+id/textView_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/textView_3"
        android:textSize="20sp"
        android:translationY="33dp"
        app:layout_constraintBottom_toTopOf="@id/editText_1"
        app:layout_constraintEnd_toStartOf="@id/editText_3"
        app:layout_constraintStart_toEndOf="@id/textView_4" />

    <EditText
        android:id="@+id/editText_3"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:hint="@string/editText_3"
        android:inputType="numberDecimal|numberSigned"
        android:lines="1"
        android:maxLines="1"
        app:layout_constraintEnd_toStartOf="@id/textView_6"
        app:layout_constraintStart_toEndOf="@id/textView_5"
        app:layout_constraintTop_toTopOf="@id/editText_1"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/textView_6"
        android:textSize="20sp"
        android:translationY="33dp"
        app:layout_constraintBottom_toTopOf="@id/editText_1"
        app:layout_constraintEnd_toStartOf="@id/editText_4"
        app:layout_constraintStart_toEndOf="@id/editText_3" />

    <EditText
        android:id="@+id/editText_4"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:hint="@string/editText_4"
        android:inputType="numberDecimal|numberSigned"
        android:lines="1"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView_6"
        app:layout_constraintTop_toTopOf="@id/editText_1"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/button_1"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/textView_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_1" />

    <TextView
        android:text="@string/textView_7"
        android:id="@+id/textView_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_1" />


</androidx.constraintlayout.widget.ConstraintLayout>